# csq

./: .gitignore  .session-notes  3p-model-primer-prepend.md  3p-model-primer.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SWEEP-2026-04-28.md  auto-rotate-hook.sh  bench-log-qwen.txt  bench-results-100pt-default-default.json  bench-results-100pt-default.json  bench-results-100pt-mm-minimax-m2.7-highspeed.json  bench-results-100pt-ollama.json  bench-results-100pt-zai-glm-5.1.json  bench-results-100pt-zai.json  bench-results-gov-mm.json  bench-results.json  cc  ccc  csq  install.sh  model-catalog.json  pyrightconfig.json  rotate.md  rotation-engine.py  statusline-quota.sh  test-3p-model-bench.py  test-broker-recovery.py  test-coc-bench.py  test-governance-50pt.py
.claude/: settings.json
.claude/agents/: deep-analyst.md  intermediate-reviewer.md  requirements-analyst.md  rust-desktop-specialist.md  rust-specialist.md  security-reviewer.md  svelte-specialist.md  tauri-platform-specialist.md  tdd-implementer.md  testing-specialist.md  uiux-designer.md
.claude/commands/: autonomize.md  design.md  release.md  sweep.md  test.md  todos.md  validate.md
.claude/learning/: observations.jsonl
.claude/rules/: account-terminal-separation.md  agents.md  autonomous-execution.md  branch-protection.md  communication.md  git.md  independence.md  journal.md  no-stubs.md  rule-authoring.md  security.md  specs-authority.md  svelte-patterns.md  tauri-commands.md  tauri-patterns.md  testing.md  zero-tolerance.md
.github/workflows/: coc-harness.yml  oauth-replay.yml  release.yml  test.yml
coc-eval/: README.md  aggregate.py  baselines.json  compare.py  conftest.py  run.py  runner.py  scoring.py
coc-eval/fixtures/: _PROVENANCE.md
coc-eval/lib/: __init__.py  auth.py  canary.py  credential_audit.py  fixtures.py  fs_assertions.py  jsonl.py  launcher.py  redact.py  run_id.py  runner.py  schema_validator.py  scoring_backends.py  states.py  suite_validator.py  validators.py
coc-eval/results/: eval-default-coc-only.json  eval-default-full.json
coc-eval/sandbox-profiles/: write-confined.sb
coc-eval/schemas/: suite-v1.json  v1.0.0.json
coc-eval/scripts/: check-fixture-substitution.sh
coc-eval/suites/: __init__.py  capability.py  compliance.py  implementation.py  safety.py
coc-eval/tests/: __init__.py  eval_a004.py  eval_a006.py  eval_b001.py  eval_p003.py  eval_p010.py
csq-cli/: Cargo.toml
csq-cli/src/: main.rs
csq-cli/src/commands/: completions.rs  daemon.rs  doctor.rs  install.rs  listkeys.rs  login.rs  logout.rs  mod.rs  models.rs  repair_credentials.rs  run.rs  setkey.rs  status.rs  statusline.rs  swap.rs  update.rs
csq-core/: Cargo.toml
csq-core/src/: error.rs  http.rs  lib.rs  types.rs
csq-core/src/accounts/: discovery.rs  identity.rs  login.rs  login_lock.rs  logout.rs  markers.rs  mod.rs  profiles.rs  snapshot.rs  third_party.rs
csq-core/src/broker/: check.rs  fanout.rs  sync.rs
csq-core/src/credentials/: file.rs  keychain.rs  mod.rs  mutex.rs  refresh.rs
csq-core/src/daemon/: auto_rotate.rs  cache.rs  client.rs  client_windows.rs  detect.rs  migrate_legacy_api_key_helper.rs  mod.rs  oauth_callback.rs  paths.rs  pid.rs  refresher.rs  server.rs  server_windows.rs  startup_reconciler.rs  usage_poller.rs
csq-core/src/daemon/usage_poller/: anthropic.rs  codex.rs  gemini.rs  minimax.rs  mod.rs  third_party.rs  zai.rs
csq-core/src/http/: codex.rs  mod.rs
csq-core/src/oauth/: constants.rs  exchange.rs  login.rs  loopback.rs  mod.rs  pkce.rs  race.rs  state_store.rs
csq-core/src/platform/: env_check.rs  fs.rs  lock.rs  mod.rs  process.rs  test_env.rs
csq-core/src/platform/secret/: audit.rs  file.rs  in_memory.rs  linux.rs  macos.rs  mod.rs  windows.rs
csq-core/src/providers/: catalog.rs  mod.rs  models.rs  ollama.rs  settings.rs  validate.rs
csq-core/src/providers/codex/: desktop_login.rs  keychain.rs  login.rs  mod.rs  models.rs  surface.rs  tos.rs
csq-core/src/providers/gemini/: capture.rs  event_id.rs  keyfile.rs  mod.rs  probe.rs  provisioning.rs  settings.rs  spawn.rs  tos.rs  tos_guard.rs
csq-core/src/quota/: format.rs  mod.rs  state.rs  status.rs
csq-core/src/rotation/: config.rs  mod.rs  picker.rs  swap.rs
csq-core/src/session/: handle_dir.rs  isolation.rs  merge.rs  mod.rs  setup.rs
csq-core/src/sessions/: linux.rs  macos.rs  mod.rs  windows.rs  windows_parse.rs
csq-core/src/update/: apply.rs  github.rs  mod.rs  verify.rs
csq-core/tests/: auto_rotate_integration.rs  credential_integration.rs  daemon_integration.rs  integration_codex_refresher_windows.rs  integration_codex_sweep.rs  no_direct_gemini_spawn.rs  oauth_e2e.rs  oauth_race_live.rs  oauth_replay.rs  platform_integration.rs  settings_materialization_smoke.rs
csq-core/tests/fixtures/codex/: scrub.sh  wham-usage-golden.json
csq-core/tests/oauth_e2e_support/: canned_responses.rs  fake_browser.rs  fake_transport.rs  harness.rs  mod.rs
csq-desktop/: fix-dmg.sh  package-lock.json  package.json  vite.config.ts
csq-desktop/src/: App.svelte
csq-desktop/src-tauri/: Cargo.toml  tauri.conf.json
csq-desktop/src-tauri/capabilities/: default.json
csq-desktop/src-tauri/icons/: icon.icns
csq-desktop/src-tauri/src/: commands.rs  daemon_supervisor.rs  lib.rs
csq-desktop/src-tauri/src/commands/: mod.rs  race.rs
dashboard/: README.md  accounts.py  cache.py  oauth.py  poller.py  refresher.py  server.py
journal/: 0004-DECISION-claude-squad-architecture.md  0005-DISCOVERY-credential-cross-contamination.md  0006-DECISION-claude-config-dir-isolation.md  0008-DECISION-remove-rotate-slash-command.md  0009-DISCOVERY-coc-hook-layer-is-model-agnostic-enforcement.md  0018-DECISION-broker-for-multi-terminal-same-account.md  0019-DECISION-broker-defense-in-depth-for-dead-canonical.md  0022-DISCOVERY-mm-missing-prepend-primer.md  0023-DECISION-100pt-dual-rubric-benchmark.md
specs/: 00-manifest.md  01-cc-credential-architecture.md  02-csq-handle-dir-model.md  05-quota-polling-contracts.md  07-provider-surface-dispatch.md  08-coc-eval-harness.md  _index.md
workspaces/: ROADMAP.md
(+328 files in other folders)
