[workspace]
resolver = "2"
members = ["csq-core", "csq-cli"]

[workspace.package]
version = "2.0.0-alpha.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/terrene-foundation/claude-squad"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
sha2 = "0.10"
unicode-normalization = "0.1"
secrecy = { version = "0.10", features = ["serde"] }
libc = "0.2"
tempfile = "3"
urlencoding = "2"
clap = { version = "4", features = ["derive"] }
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "blocking"] }
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "json", "query"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = { version = "0.5", features = ["util"] }
base64 = "0.22"
getrandom = "0.2"
security-framework = "3"
