[workspace]
resolver = "2"
members = ["csq-core", "csq-cli", "csq-desktop/src-tauri"]

[workspace.package]
version = "2.0.0-alpha.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/terrene-foundation/csq"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
# tracing-log is a default feature that silently installs a
# LogTracer via log::set_logger when `.try_init()` runs. csq-desktop
# registers tauri-plugin-log which ALSO installs a log facade — the
# second installation fails with SetLoggerError and panics the
# desktop app at startup. Disable tracing-log (and re-enable the
# other defaults we actually use) to keep the two systems separate.
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "std", "ansi", "smallvec"] }
hex = "0.4"
sha2 = "0.10"
unicode-normalization = "0.1"
secrecy = { version = "0.10", features = ["serde"] }
libc = "0.2"
tempfile = "3"
urlencoding = "2"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "blocking"] }
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "json", "query"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = { version = "0.5", features = ["util"] }
base64 = "0.22"
getrandom = "0.2"
security-framework = "3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
