[workspace]
resolver = "2"
members = ["csq-core", "csq-cli", "csq-desktop/src-tauri"]

[workspace.package]
version = "2.3.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/terrene-foundation/csq"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
# tracing-log is a default feature that silently installs a
# LogTracer via log::set_logger when `.try_init()` runs. csq-desktop
# registers tauri-plugin-log which ALSO installs a log facade — the
# second installation fails with SetLoggerError and panics the
# desktop app at startup. Disable tracing-log (and re-enable the
# other defaults we actually use) to keep the two systems separate.
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "std", "ansi", "smallvec"] }
hex = "0.4"
sha2 = "0.10"
unicode-normalization = "0.1"
secrecy = { version = "0.10", features = ["serde"] }
libc = "0.2"
tempfile = "3"
urlencoding = "2"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "blocking"] }
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "json", "query"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = { version = "0.5", features = ["util"] }
base64 = "0.22"
getrandom = "0.2"
security-framework = "3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
# Gemini PR-G2a — encryption-at-rest primitives for the platform::secret
# fallback path (Linux without Secret Service / explicit opt-in). RustCrypto
# audited pure Rust; no FFI. argon2 is OWASP 2023 KDF; aes-gcm is the AEAD.
# zeroize wipes secret material before drop.
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
# `subtle` provides constant-time equality (`ConstantTimeEq`) for
# comparing OAuth state tokens. Already a transitive dep of
# `ed25519-dalek` / `aes-gcm`, so adding it as a direct workspace dep
# does not pull anything new into the build graph — only gives us the
# public API surface. Kept at workspace level so both `csq-core` (state
# store + race) and `csq-desktop` (race state-token compare) share the
# same version.
subtle = { version = "2", default-features = false }
# Gemini PR-G2a.2 — Linux Secret Service / kwallet via D-Bus. The crate's
# `rt-tokio-crypto-rust` feature picks tokio for the async runtime and
# RustCrypto for session-key crypto so we keep the no-OpenSSL-FFI posture.
# Linux-only — the crate itself does not compile on macOS / Windows.
secret-service = { version = "4", default-features = false, features = ["rt-tokio-crypto-rust"] }
