[package]
name = "csq-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "csq"
path = "src/main.rs"

[dependencies]
csq-core = { path = "../csq-core" }
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
clap_complete.workspace = true
dirs.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
