[package]
name = "csq-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
hex.workspace = true
sha2.workspace = true
unicode-normalization.workspace = true
secrecy.workspace = true
urlencoding.workspace = true
base64.workspace = true
getrandom.workspace = true
reqwest.workspace = true
axum.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tokio-util.workspace = true
tower.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true

[dev-dependencies]
tempfile.workspace = true
