[package]
name = "csq-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
hex.workspace = true
sha2.workspace = true
unicode-normalization.workspace = true
secrecy.workspace = true
urlencoding.workspace = true
base64.workspace = true
getrandom.workspace = true
reqwest.workspace = true
ed25519-dalek.workspace = true
axum.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tokio-util.workspace = true
tower.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true

# Windows-only: low-level syscalls for session discovery (PEB
# walking via NtQueryInformationProcess + ReadProcessMemory). The
# `windows-sys` crate is a thin set of FFI bindings and is the same
# dependency `tauri` and `tokio` already pull in on Windows, so no
# new transitive graph.
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }

[dev-dependencies]
tempfile.workspace = true
