[package]
name = "csq-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Claude Squad desktop app — multi-account quota monitoring and rotation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "csq_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
csq-core = { path = "../../csq-core" }
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"

[dev-dependencies]
tempfile.workspace = true
